[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesla-auth-py"
version = "0.1.0"
description = "Securely generate API tokens for third-party access to your Tesla"
readme = "README_PYTHON.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0 OR MIT"}
keywords = ["tesla", "oauth", "authentication", "api", "tokens"]
authors = [
    {name = "Tesla Auth Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/haim0n/tesla_auth_py"
Repository = "https://github.com/haim0n/tesla_auth_py"
Issues = "https://github.com/haim0n/tesla_auth_py/issues"

[project.scripts]
tesla-auth-py = "tesla_auth:main"

[tool.setuptools]
py-modules = ["tesla_auth"]
